--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,34 @@
 }
 
 /* header */
-#header {
+#navbar {
 	background: #000;
-	padding: 20px
-	
+	display: flex;
+	justify-content: space-between;
+	align-items: center
 }
 
-#header_logo {
-	width: 50px
+#navbar img {
+	width: 75px;
+	display: block
 }
+
+#navbar ul {
+	display: flex;
+	list-style: none;
+    margin: 0;
+    padding: 0
+}
+    
+#navbar ul li {
+	margin-left: 20px;
+}
+
+#navbar ul li a {
+    display: block;
+    padding: 10px 15px;
+    color: #fff;
+    text-decoration: none
+}
+
+
