--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ form input {
 #form-btn {
 	width: 100%;
 	display: flex;
-	justify-content: right;
+	justify-content: center;
 
 }
 
@@ -244,10 +244,11 @@ form input {
 	font-weight: bold;
 	text-decoration: none;
 	background: #9E98DA;
-	padding: 5px 20px;
 	border: 5px solid #36E7EA;
 	border-radius: 100px;
-	width: 20%;
+	width: 30%;
+	max-width: 150px;
+	padding: 5px 0;
 	margin: 10px 30px;
 }
 
