--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 /*navbar*/
 
-#nav {
-    padding: 0;
+nav {
+    justify-content: space-between;
 }
 
 #nav-menu {
@@ -9,19 +9,34 @@
     justify-content: center;
     flex-direction: column;
     background: #000;
-    margin-top: 50px;
+    margin: 15vh 0 0 5vw;
     height: 200vh;
     width: 0;
+    transition: 0.3s;
+    transform: translateX(40px);
 }
 
 #nav-menu a {
     font-size: 2vh;
-    width: 100%
+    width: 100%;
 }
+
+
 
 #sidemenu-open-btn,
 #sidemenu-close-btn {
     display: block;
+}
+
+#sidemenu-open-btn {
+    font-size: 20px;
+    transform: translateX(75vw);
+    position: fixed;
+}
+
+#sidemenu-close-btn {
+    text-align: right;
+    padding: 5vh;
 }
 
 /*about*/
