--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,18 @@
+/*general*/
+
+hr {
+    width: 80%;
+}
+
+p {
+    font-size: 2vh;
+}
+
+section {
+	padding-top: 8vh;
+}
+
+
 /*navbar*/
 
 nav {
@@ -39,6 +54,12 @@ nav {
     padding: 5vh;
 }
 
+#dark-switch,
+#light-switch {
+    font-size: 3vh;
+    margin-top: 2vh;
+}
+
 /*about*/
 
 #intro {
@@ -47,6 +68,12 @@ nav {
 
 #portrait {
     display: none;
+}
+
+/*skills*/
+
+#skill-logos img {
+    max-height: 10vh;
 }
 
 /*contact*/
